.provarCaches/00D5f000005vwGkEAI/objects/rstk__ictsl__c.object
<CustomObject>
    <description>ictsl__c    (Z_OBSOLETE -- Target Stocking Level Upload in Orig Fmt)</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__ictsl_factory__c +  rstk__ictsl_item__c + TEXT( rstk__ictsl_procseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__ictsl_factory__c + &apos;-&apos; +  rstk__ictsl_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_factory__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Factory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>ictsls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_maxqty__c</fullName>
        <label>Max Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_procseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>TSL Column</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictsl_supplier__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__RS_TSL</fullName>
        <columns>NAME</columns>
        <columns>rstk__ictsl_desc__c</columns>
        <columns>rstk__ictsl_factory__c</columns>
        <columns>rstk__ictsl_icitem__c</columns>
        <columns>rstk__ictsl_item__c</columns>
        <columns>rstk__ictsl_procseq__c</columns>
        <columns>rstk__ictsl_supplier__c</columns>
        <columns>rstk__ictsl_qty__c</columns>
        <columns>rstk__ictsl_maxqty__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>TSL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__TSL_Upload_Records</fullName>
        <columns>NAME</columns>
        <columns>rstk__ictsl_procseq__c</columns>
        <columns>rstk__ictsl_icitem__c</columns>
        <columns>rstk__ictsl_item__c</columns>
        <columns>rstk__ictsl_desc__c</columns>
        <columns>rstk__ictsl_factory__c</columns>
        <columns>rstk__ictsl_supplier__c</columns>
        <columns>rstk__ictsl_qty__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>TSL Upload Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__marty</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__ictsl_desc__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__ictsl_factory__c</columns>
        <columns>rstk__ictsl_icitem__c</columns>
        <columns>rstk__ictsl_item__c</columns>
        <columns>rstk__ictsl_procseq__c</columns>
        <columns>rstk__ictsl_supplier__c</columns>
        <columns>rstk__ictsl_qty__c</columns>
        <filterScope>Everything</filterScope>
        <label>marty</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Stocking Level Upload in Orig Fmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>